# hnsqlite

./: .gitignore  README.md  pyproject.toml
hnsqlite/: __init__.py  collection.py  filter.py  test_collection.py  test_filter.py  util.py
test/: hnsqlite.sqlite  test_collection.py  test_collection_filter.py  test_filter.py  test_s3.py
