[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hnsqlite"
version = "0.0.3"
authors = [
  { name="Bill Kish", email="bk@jiggy.ai" },
]
dependencies=['sqlmodel', 'hnswlib', 'psutil', 'numpy', 'loguru']
description = "A minimalist integration of sqlite and hnswlib focused on providing simple embedding persistence and search for text applications."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/jiggy-ai/hnsqlite"
"Bug Tracker" = "https://github.com/jiggy-ai/hnsqlite/issues"